<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weather</string>
    <string name="location_name">Moscow</string>
    <string name="page_home">Home</string>
    <string name="group_general">General</string>
    <string name="group_reference">Reference</string>
    <string name="page_info">Info</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="page_history">Forecast</string>
    <string name="page_developer">Developer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_view_developer">Developer:</string>
    <string name="text_view_developer_name">Arsen Saliev</string>
    <string name="text_view_developer_contacts">Contacts</string>
    <string name="text_view_developer_number">+7 (708) 077-8008</string>
    <string name="text_view_developer_email">arsensaliev03@gmail.com</string>
    <string name="main_fragment_current_info">loading</string>
    <string name="main_fragment_temperature">Temperature:</string>
    <string name="main_fragment_wind">Wind:</string>
    <string name="main_fragment_humidity">Humidity:</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="main_fragment_pressure">Pressure:</string>
    <string name="main_fragment_pressure_value">hPa</string>
    <string name="main_fragment_wind_value">m/sec</string>
    <string name="main_fragment_humidity_value">%</string>
    <string name="main_fragment_temperature_value">°С</string>
    <string name="text_view_location">Write your city</string>
    <string name="page_location">Location</string>
    <string name="search">Search</string>
</resources>