<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/group_general">
        <menu>
            <item
                android:id="@+id/home"
                android:icon="@drawable/ic_home_24"
                android:orderInCategory="10"
                android:title="@string/page_home" />
            <item
                android:id="@+id/history"
                android:icon="@drawable/ic_history_24"
                android:orderInCategory="20"
                android:title="@string/page_history" />
            <item
                android:id="@+id/location"
                android:icon="@drawable/ic_location_city_24"
                android:orderInCategory="20"
                android:title="@string/page_location" />
        </menu>
    </item>

    <item android:title="@string/group_reference">
        <menu>
            <item
                android:id="@+id/developer"
                android:icon="@drawable/ic_developer_24"
                android:orderInCategory="10"
                android:title="@string/page_developer" />
        </menu>
    </item>
</menu>