<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <TextView
        android:id="@+id/mainFragmentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/location_name"
        android:textSize="@dimen/main_fragment_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/main_fragment_temperature"
        android:textSize="@dimen/main_fragment_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainFragmentLocation" />

    <TextView
        android:id="@+id/main_fragment_current_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/main_fragment_current_info"
        android:textSize="@dimen/main_fragment_info"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/main_fragment_temperature_value"
        android:textSize="@dimen/main_fragment_info"
        app:layout_constraintBottom_toBottomOf="@+id/main_fragment_current_temperature"
        app:layout_constraintStart_toEndOf="@+id/main_fragment_current_temperature" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_fragment_wind"
        android:textSize="@dimen/main_fragment_info"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/main_fragment_current_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/main_fragment_current_info"
        android:textSize="@dimen/main_fragment_info"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/main_fragment_wind_value"
        android:textSize="@dimen/main_fragment_info"
        app:layout_constraintBottom_toBottomOf="@+id/main_fragment_current_wind"
        app:layout_constraintStart_toEndOf="@+id/main_fragment_current_wind" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_fragment_humidity"
        android:textSize="@dimen/main_fragment_info"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_fragment_humidity_value"
        android:textSize="@dimen/main_fragment_info"
        app:layout_constraintBottom_toBottomOf="@+id/main_fragment_current_humidity"
        app:layout_constraintStart_toEndOf="@+id/main_fragment_current_humidity" />

    <TextView
        android:id="@+id/main_fragment_current_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/main_fragment_current_info"
        android:textSize="@dimen/main_fragment_info"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_fragment_pressure"
        android:textSize="@dimen/main_fragment_info"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/main_fragment_current_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/main_fragment_current_info"
        android:textSize="@dimen/main_fragment_info"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/main_fragment_pressure_value"
        android:textSize="@dimen/main_fragment_info"
        app:layout_constraintBottom_toBottomOf="@+id/main_fragment_current_pressure"
        app:layout_constraintStart_toEndOf="@+id/main_fragment_current_pressure" />

</androidx.constraintlayout.widget.ConstraintLayout>